correct wrapping on small screens

--- a/src/styles.less
+++ b/src/styles.less
@@ -14,3 +14,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-progress-spinner circle, .mat-spinner circle {
     stroke: #ffffff;
     }
+.mat-checkbox-label {
+    white-space: normal;
+}
